--- a/data/feeds.yaml
+++ b/data/feeds.yaml
@@ -1,4 +1,9 @@
 latest:
+  - title: "AI Idgit Chronicles II: Fake Journals & AI Delulu"
+    site: "Prompted by Adrianne"
+    url: "https://ai.adrianne.io/blog/ai-idgit-02-fakejournals/"
+    emoji: "🤖"
+
   - title: "AI Idgit Chronicles I: The Math Ain't Mathing (OpenAI's Embarrassing Equation)"
     site: "Prompted by Adrianne"
     url: "https://ai.adrianne.io/blog/ai-idgit-mathaintmathing/"
